--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
         <section id="portfolio" class="section">
             <h2>Portfolio</h2>
             <div class="portfolio">
-                <img src="C:/Users/Admin/Pictures/suvarna%20hebbar.jpeg" alt="Project 1">
-                <img src="C:/Users/Admin/Pictures/Black Gold Minimalist Monochrome Initial Name Logo.jpg" alt="Project 2">
+                <img src="suvarna hebbar.jpeg" alt="Project 1">
+                <img src="Black Gold Minimalist Monochrome Initial Name Logo.jpg" alt="Project 2">
                 
                 <!-- Logo image section -->
-                <img id="logo" class="logo-img" src="C:/Users/Admin/Pictures/Black White Bold Fashion Store Logo.jpg" alt="Logo Image" onclick="toggleLogo()">
-                <img id="secondLogo" class="second-logo" src="C:/Users/Admin/Pictures/Black Natural Branding Logo.jpg" alt="Second Logo Image" onclick="toggleLogo()">
+                <img id="logo" class="logo-img" src="Black White Bold Fashion Store Logo.jpg" alt="Logo Image" onclick="toggleLogo()">
+                <img id="secondLogo" class="second-logo" src="Black Natural Branding Logo.jpg" alt="Second Logo Image" onclick="toggleLogo()">
             </div>
         </section>
 
