Revise index.html with updated content and styles
Updated the content and structure of the index.html file, including changes to the header, about section, and portfolio links.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
     <header>
         <h1>Suvarna Hebbar</h1>
-        <p>Creative Graphic Designer | Illustrator</p>
+        <p>Frontend Developer || Web Developer</p>
     </header>
 
     <nav>
@@ -114,13 +114,14 @@
         <!-- About Section -->
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>Hi, I’m Suvarna Hebbar, a passionate graphic designer with experience in logo design, branding, and UX/UI design. I strive to create visually appealing and user-friendly designs that leave a lasting impression.</p>
+            <p>Hi, I’m Suvarna Hebbar, Enthusiastic and detail-oriented Frontend Developer with hands-on experience in React.js, HTML, CSS, and JavaScript. Completed multiple frontend projects, including job listing platform and portfolio website, showcasing skills in responsive design, component-based development, and user-friendly UI. Seeking a challenging role in a dynamic company to contribute and grow as a frontend professional.</p>
         </section>
 
         <!-- Portfolio Section -->
         <section id="portfolio" class="section">
             <h2>Portfolio</h2>
             <div class="portfolio">
+                <a> herf= "https://job-listing-board-project-fppuqnbes-suvarna-hebbars-projects.vercel.app/">Job Listing Board Project</a>
                 <img src="suvarna hebbar.jpeg" alt="Project 1">
                 <img src="Black Gold Minimalist Monochrome Initial Name Logo.jpg" alt="Project 2">
                 
@@ -161,3 +162,4 @@
     </script>
 </body>
 </html>
+
