--- a/index.html
+++ b/index.html
@@ -222,16 +222,16 @@
       <span class="close" onclick="closeModal('job')">&times;</span>
       <h3>Job Listing Board</h3>
       <p>React-based job portal with Admin & User flow.</p>
-      <a href="#" target="_blank">View Project</a>
+      <a href="https://job-listing-board-project-fppuqnbes-suvarna-hebbars-projects.vercel.app/" target="_blank">View Project</a>
     </div>
   </div>
 
   <div id="portfolio" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('portfolio')">&times;</span>
-      <h3>Portfolio Website</h3>
-      <p>Personal portfolio built using HTML, CSS, JavaScript.</p>
-      <a href="#" target="_blank">View Project</a>
+      <h3>women-business-directory</h3>
+      <p>women-business-directory using HTML, CSS, JavaScript.</p>
+      <a href="https://women-business-directory.vercel.app/register" target="_blank">View Project</a>
     </div>
   </div>
 
@@ -264,3 +264,4 @@
 
 </body>
 </html>
+
