--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </div>
 
       <div class="project-card" onclick="openModal('portfolio')">
-        <h3>Portfolio Website</h3>
+        <h3>women-business-directory</h3>
       </div>
     </div>
   </section>
@@ -242,9 +242,9 @@
     <p>Phone: +91 99727 01590</p>
 
     <div class="social">
-      <a href="#">LinkedIn</a> |
-      <a href="#">Instagram</a> |
-      <a href="#">GitHub</a>
+      <a href="https://www.linkedin.com/in/suvarna-hebbar-45b684275/">LinkedIn</a> |
+  
+      <a href="https://github.com/suva26">GitHub</a>
     </div>
   </section>
 
@@ -264,4 +264,5 @@
 
 </body>
 </html>
+
 
