--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <span class="close" onclick="closeModal('portfolio')">&times;</span>
       <h3>women-business-directory</h3>
       <p>women-business-directory using HTML, CSS, JavaScript.</p>
-      <a href="https://women-business-directory.vercel.app/register" target="_blank">View Project</a>
+      <a href="https://women-business-directory.vercel.app/" target="_blank">View Project</a>
     </div>
   </div>
 
@@ -264,5 +264,6 @@
 
 </body>
 </html>
+
 
 
