--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
     </div>
   </div>
 
-  <div id="portfolio" class="modal">
+  <div id="job" class="modal">
     <div class="modal-content">
-      <span class="close" onclick="closeModal('portfolio')">&times;</span>
-      <h3>women-business-directory</h3>
-      <p>women-business-directory using HTML, CSS, JavaScript.</p>
+      <span class="close" onclick="closeModal('job')">&times;</span>
+      <h3>Women buiness Directory</h3>
+      <p>Women Business Direcory</p>
       <a href="https://women-business-directory.vercel.app/" target="_blank">View Project</a>
     </div>
   </div>
@@ -264,6 +264,7 @@
 
 </body>
 </html>
+
 
 
 
