--- a/index.html
+++ b/index.html
@@ -258,12 +258,13 @@
     }
 
     function closeModal(id) {
-      document.getElementById(id).style.display = "none";
+      document.getElementById(id).style.display = "flex";
     }
   </script>
 
 </body>
 </html>
+
 
 
 
