--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     }
 
     function closeModal(id) {
-      document.getElementById(id).style.display = "flex";
+      document.getElementById(id).style.display = "none";
     }
   </script>
 
