--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </div>
 
       <div class="project-card" onclick="openModal('portfolio')">
-        <h3>women-business-directory</h3>
+        <h3>Portfolio Website</h3>
       </div>
     </div>
   </section>
@@ -222,16 +222,16 @@
       <span class="close" onclick="closeModal('job')">&times;</span>
       <h3>Job Listing Board</h3>
       <p>React-based job portal with Admin & User flow.</p>
-      <a href="https://job-listing-board-project-fppuqnbes-suvarna-hebbars-projects.vercel.app/" target="_blank">View Project</a>
+      <a href="#" target="_blank">View Project</a>
     </div>
   </div>
 
-  <div id="job" class="modal">
+  <div id="portfolio" class="modal">
     <div class="modal-content">
-      <span class="close" onclick="closeModal('job')">&times;</span>
-      <h3>Women buiness Directory</h3>
-      <p>Women Business Direcory</p>
-      <a href="https://women-business-directory.vercel.app/" target="_blank">View Project</a>
+      <span class="close" onclick="closeModal('portfolio')">&times;</span>
+      <h3>Portfolio Website</h3>
+      <p>Personal portfolio built using HTML, CSS, JavaScript.</p>
+      <a href="#" target="_blank">View Project</a>
     </div>
   </div>
 
@@ -242,9 +242,9 @@
     <p>Phone: +91 99727 01590</p>
 
     <div class="social">
-      <a href="https://www.linkedin.com/in/suvarna-hebbar-45b684275/">LinkedIn</a> |
-  
-      <a href="https://github.com/suva26">GitHub</a>
+      <a href="#">LinkedIn</a> |
+      <a href="#">Instagram</a> |
+      <a href="#">GitHub</a>
     </div>
   </section>
 
@@ -264,8 +264,3 @@
 
 </body>
 </html>
-
-
-
-
-
