--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   <div id="portfolioProject" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('portfolioProject')">&times;</span>
-      <h3>Portfolio Website</h3>
+      <h3>woman buniess directory</h3>
       <p>Personal portfolio built using HTML, CSS, and JavaScript.</p>
       <a href="#" target="_blank">View Project</a>
     </div>
@@ -267,3 +267,4 @@
 
 </body>
 </html>
+
