--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </div>
 
       <div class="project-card" onclick="openModal('portfolioProject')">
-        <h3>Portfolio Website</h3>
+        <h3>Women Buiness Directory</h3>
       </div>
     </div>
   </section>
@@ -267,4 +267,5 @@
 
 </body>
 </html>
+
 
