--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </div>
 
       <div class="project-card" onclick="openModal('portfolioProject')">
-        <h3>Women Buiness Directory</h3>
+        <h3>Women Business Directory</h3>
       </div>
     </div>
   </section>
@@ -224,7 +224,7 @@
       <span class="close" onclick="closeModal('jobProject')">&times;</span>
       <h3>Job Listing Board</h3>
       <p>React-based job portal with Admin and User flow.</p>
-      <a href="#" target="_blank">View Project</a>
+      <a href="https://job-listing-board-project-fppuqnbes-suvarna-hebbars-projects.vercel.app/" target="_blank">View Project</a>
     </div>
   </div>
 
@@ -233,8 +233,8 @@
     <div class="modal-content">
       <span class="close" onclick="closeModal('portfolioProject')">&times;</span>
       <h3>woman buniess directory</h3>
-      <p>Personal portfolio built using HTML, CSS, and JavaScript.</p>
-      <a href="#" target="_blank">View Project</a>
+      <p>Women Business Directory built using HTML, CSS, and JavaScript.</p>
+      <a href="https://women-business-directory.vercel.app/" target="_blank">View Project</a>
     </div>
   </div>
 
@@ -245,9 +245,9 @@
     <p>Phone: +91 99727 01590</p>
 
     <div class="social">
-      <a href="#">LinkedIn</a> |
-      <a href="#">Instagram</a> |
-      <a href="#">GitHub</a>
+      <a href="https://www.linkedin.com/in/suvarna-hebbar-45b684275/">LinkedIn</a> |
+      
+      <a href="https://github.com/suva26">GitHub</a>
     </div>
   </section>
 
@@ -267,5 +267,6 @@
 
 </body>
 </html>
+
 
 
